[package]
name = "tarpc-iceoryx2-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
futures = "0.3"
iceoryx2 = "0.7"
bitcode = { version = "0.6", features = ["serde"] }
postcard = { version = "1", features = ["use-std"] }
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.37", default-features = false, features = [
    "serde-transport",
    "serde-transport-bincode",
    "serde1",
    "tokio1",
] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
speedy = "0.8"

[[bench]]
name = "tarpc_transport"
harness = false
